--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "version": "5.4.0"
   },
   "dependencies": {
-    "hexo": "^5.0.0",
+    "favicon": "^0.0.2",
+    "hexo": "^5.4.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
@@ -25,6 +26,7 @@
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
     "hexo-theme-landscape": "^0.0.3",
-    "live2d-widget-model-hijiki": "^1.0.5"
+    "live2d-widget-model-hijiki": "^1.0.5",
+    "prismjs": "^1.24.1"
   }
 }
