--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "favicon": "^0.0.2",
     "hexo": "^5.4.0",
+    "hexo-abbrlink": "^2.2.1",
     "hexo-deployer-git": "^3.0.0",
     "hexo-filter-image": "^1.2.3",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
+    "hexo-generator-search": "^2.4.3",
     "hexo-generator-tag": "^1.0.0",
     "hexo-helper-live2d": "^3.1.1",
     "hexo-render-pug": "^2.1.4",
@@ -26,8 +29,11 @@
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
+    "hexo-tag-aplayer": "^3.0.4",
     "hexo-theme-landscape": "^0.0.3",
+    "hexo-wordcount": "^6.0.1",
     "live2d-widget-model-hijiki": "^1.0.5",
-    "prismjs": "^1.24.1"
+    "prismjs": "^1.24.1",
+    "wordcloud": "^1.2.2"
   }
 }
