--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "favicon": "^0.0.2",
     "hexo": "^5.4.0",
     "hexo-abbrlink": "^2.2.1",
+    "hexo-asset-image": "github:7ym0n/hexo-asset-image",
     "hexo-deployer-git": "^3.0.0",
     "hexo-filter-image": "^1.2.3",
     "hexo-generator-archive": "^1.0.0",
