--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,7 @@ deploy:
   repo: https://github.com/Kilzo/Kilzo.github.io.git
   branch: master # 默认使用 master 分支
   message: Update Hexo Static Content # 你可以自定义此次部署更新的说明
+
 live2d:
     enable: true
     scriptFrom: local
@@ -174,3 +175,12 @@ aplayer:
 katex:
   copy_tex: true
   global: false
+
+#博客备份
+backup:
+  type: git
+  theme: yun
+  message: "增加功能中"
+  repository:
+    github: git@github.com:Kilzo/Kilzo.github.io.git,hexo
+    #coding: git@git.dev.tencent.com:Kilzo/Kilzo.git,hexo
