--- a/_config.yml
+++ b/_config.yml
@@ -183,4 +183,4 @@ backup:
   message: "增加功能中"
   repository:
     github: git@github.com:Kilzo/Kilzo.github.io.git,hexo
-    #coding: git@git.dev.tencent.com:Kilzo/Kilzo.git,hexo
+    coding: git@git.dev.tencent.com:Kilzo/Kilzo.git,hexo
