--- a/source/_data/yun.yml
+++ b/source/_data/yun.yml
@@ -1,6 +1,7 @@
 avatar:
   enable: true
-  url: /images/avatar.jpg
+  #url: /images/avatar.jpg
+  url: https://cdn.jsdelivr.net/gh/Kilzo/cdn@0.1/avatar/avatar.jpg
   rounded: true
   opacity: 1
   mickey_mouse: false
@@ -145,8 +146,10 @@ font:
 #图片背景（透明度等
 bg_image:
   enable: true
-  url: https://cdn.jsdelivr.net/gh/YunYouJun/cdn/img/bg/stars-timing-0-blur-30px.jpg
-  dark: /images/background.jpg                                 #暗色背景
+  #url: https://cdn.jsdelivr.net/gh/YunYouJun/cdn/img/bg/stars-timing-0-blur-30px.jpg
+  url: https://cdn.jsdelivr.net/gh/Kilzo/cdn@0.1/background/background-light.jpg
+  #dark: /images/background.jpg                                 #暗色背景
+  dark: https://cdn.jsdelivr.net/gh/Kilzo/cdn@0.1/background/background.jpg
   blur: 0px # 设置背景模糊程度
   opacity: 9.99
 
@@ -322,7 +325,8 @@ reward:
   # url: https://github.com/YunYouJun/yunyoujun.github.io/issues/96
   methods:
     - name: 支付宝
-      path: https://cdn.jsdelivr.net/gh/Kilzo/cdn/img/donate/alipay-qrcode.jpg
+      #path: https://cdn.jsdelivr.net/gh/Kilzo/cdn/img/donate/alipay-qrcode.jpg
+      path: https://cdn.jsdelivr.net/gh/Kilzo/cdn@0.1/donate/alipay-qrcode.jpg
       color: "#00A3EE"
       icon: icon-alipay-line
     #- name: QQ 支付
@@ -330,7 +334,8 @@ reward:
     #  color: "#12B7F5"
     #  icon: icon-qq-line
     - name: 微信支付
-      path: https://cdn.jsdelivr.net/gh/Kilzo/cdn/img/donate/wechat-qrcode.jpg
+      #path: https://cdn.jsdelivr.net/gh/Kilzo/cdn/img/donate/wechat-qrcode.jpg
+      path: https://cdn.jsdelivr.net/gh/Kilzo/cdn@0.1/donate/wechat-qrcode.jpg
       color: "#2DC100"
       icon: icon-wechat-pay-line
 
